--- a/workspace-sts/community/.project
+++ b/workspace-sts/community/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>project_community</name>
+	<name>community</name>
 	<comment></comment>
 	<projects>
 	</projects>
