--- a/workspace-sts/board_project/pom.xml
+++ b/workspace-sts/board_project/pom.xml
@@ -21,6 +21,11 @@
 		    <artifactId>spring-test</artifactId>
 		    <version>5.2.24.RELEASE</version>
 		</dependency>	
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		    <version>5.2.24.RELEASE</version>
+		</dependency>
 		<!-- DB 관련 의존성  -->
 		<dependency>
 		   <groupId>com.zaxxer</groupId>
