--- a/workspace-sts/board_project/src/main/resources/database/db.properties
+++ b/workspace-sts/board_project/src/main/resources/database/db.properties
@@ -1,4 +1,4 @@
 db.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 db.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:XE
-db.username=kimhyeonsu
+db.username=KIMHYEONSU
 db.password=1234
