--- a/workspace-sts/board_project/pom.xml
+++ b/workspace-sts/board_project/pom.xml
@@ -154,6 +154,18 @@
 		  <version>5.3.9</version>
 		</dependency>
 			
+		<!-- Quartz 라이브러리 관련 의존성 -->	
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz-jobs</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
+		
 	</dependencies>
   <build>
     <plugins>
